# DPMM

./: .gitignore  Cargo.toml  README.md
src/: cluster.rs  datum.rs  main.rs  model.rs  normal.rs  traits.rs
