[package]
name = "dpmm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2.7"
nalgebra = "0.32.2"
plotters = "0.3.4"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
ndarray-inverse = "0.1.9"
num-traits = "0.2.15"
hdf5 = "0.8.1"
pyo3 = "0.19.0"
